# xclaude

./: CLAUDE.md  Cargo.toml  README.md  consumer.py  install.sh  openapi.json
docs/: claude-data-layout.md  events.md  xclaude.md  xclaude_events.md
examples/: parse_logs.py  query_db.py  token_usage.py
poc/: live_session.py
schemas/events/: ConfigChange.json  Elicitation.json  ElicitationResult.json  InstructionsLoaded.json  Notification.json  PermissionRequest.json  PostCompact.json  PostToolUse.json  PostToolUseFailure.json  PreCompact.json  PreToolUse.json  SessionEnd.json  SessionStart.json  Stop.json  StopFailure.json  SubagentStart.json  SubagentStop.json  TaskCompleted.json  TeammateIdle.json  UserPromptSubmit.json  WorktreeCreate.json  WorktreeRemove.json  _common.json
spec/: adapter.md
src/: _events.rs  commands.rs  db.rs  events.rs  hooks.rs  logger.rs  main.rs  rpc.rs  session.rs  socket.rs  transcript.rs  wrapper.rs
src/schemas/: hooks.rs  mod.rs  tools.rs  transcript.rs
xclaude-app/: Package.swift
xclaude-app/.build/: build.db  debug.yaml
xclaude-app/.build/arm64-apple-macosx/debug/: XClaudeApp  plugin-tools-description.json
xclaude-app/.build/arm64-apple-macosx/debug/Modules/: XClaudeApp.swiftdoc  XClaudeApp.swiftmodule  XClaudeApp.swiftsourceinfo
xclaude-app/Sources/XClaudeApp/: App.swift  ContentView.swift  EventBus.swift  Models.swift  SQLiteReader.swift  SessionCanvasView.swift  SessionDetailView.swift  SessionSidebar.swift  SocketServer.swift  SubagentRow.swift  ToolCallRow.swift
(+198 files in other folders)
