[package]
name = "xclaude"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4.6.0", features = ["derive"] }
jsonschema = "0.29"
